# VESTA_Agent

./: .env.example  .gitignore  .replit  Dockerfile.backend  EMAIL_FEATURE_IMPLEMENTATION.md  Makefile  README.md  TODO.md  customer_feedback.db  docker-compose.yml  pyproject.toml  replit.md  requirements.txt  test_backend_edge_cases.py  test_frontend_backend.py  test_verification.py
attached_assets/: Pasted-You-are-an-expert-AI-engineer-and-full-stack-builder-Take-the-following-MVP-code-CrewAI-Pydantic-1759506485276_1759506485306.txt
backend/: app.py  crew_pipeline.py  db.py  markdown_to_html.py  scheduler.py
backend/models/: schemas.py
backend/routes/: feedback.py  reports.py
data/: sample_feedback.csv
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CSVUploadTest.tsx  Charts.tsx  FeedbackForm.tsx  FeedbackTable.tsx  PriorityChart.tsx  ReportPreview.tsx  ReportViewer.tsx  ThemeProvider.tsx  Toggle.tsx
frontend/styles/: shopify-inspired.css
integrations/: email_integration.py  email_service.py  notion.py
reports/: 2025-10-03_16-11-28.md  2025-10-03_16-12-01.md
tests/: test_api.py  test_db.py  test_models.py
vesta_backend/backend/: app.py  crew_pipeline.py  db.py
vesta_backend/integrations/: email_integration.py  slack.py
vesta_frontend/: README.md  deploy.bat  deploy.sh  netlify.toml  package-lock.json  package.json  tailwind.config.js
vesta_frontend/app/: layout.tsx  page.tsx
vesta_frontend/components/: Charts.tsx  FeedbackTable.tsx  ReportPreview.tsx  (+2 more)
(+5 files in other folders)
