[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "crewai>=0.201.1",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.34",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "slack-sdk>=3.36.0",
    "uvicorn>=0.37.0",
]
